--- a/spectra.html
+++ b/spectra.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!---------------------RENDERS WEBGL GAME FROM UNITY--------------------->
 <html lang="en-us">
   <head>
     <meta charset="utf-8">
